# differential-equation-compiler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/: CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  ExprAST.hpp  diffeq.cpp
tests/: CMakeLists.txt  test_test.cpp
